--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <!-- Navbar start -->
     <nav class="navbar">
-      <a href="#" class="navbar-logo">efendik <span>punk</span></a>
+      <a href="#" class="navbar-logo">Cangkruk <span>VIP</span></a>
 
       <div class="navbar-nav">
         <a href="#home">Home</a>
